--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "angular-animations": "^0.11.0",
     "bootstrap": "^4.5.0",
+    "ngx-confirm-box": "0.0.3",
     "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
