--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,7 +8,7 @@
 	},
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
-		"ProductionConnection": "Server=myServerAddress;Database=myDataBase;User Id=myUsername;Password=myPassword;"
+		"ProductionConnection": "Data Source=TicketManagerContext.db;Cache=Shared"
 	},
 	"SecretKey": "dD6CrLCIbEM4WOdUCwGe"
 }
